--- a/react-profile/src/data/projects.json
+++ b/react-profile/src/data/projects.json
@@ -1,19 +1,19 @@
 [
   {
     "title": "Personal Portfolio",
-    "imageSrc": "projects/project.png",
+    "imageSrc": "projects/port.png",
     "description": "Personal profile webpage that shows my experience, education, projects, skills and where to contact me.",
     "skills": ["React", "CSS", "JS"]
   },
   {
     "title": "Cars App",
-    "imageSrc": "projects/project.png",
+    "imageSrc": "projects/port.png",
     "description": "An iOS app that showcases car brands, models, videos and images in a tab view.",
     "skills": ["Swift", "JSON"]
   },
   {
     "title": "Pomodoro Tomato Timer",
-    "imageSrc": "projects/project.png",
+    "imageSrc": "projects/pomo.png",
     "description": "Timer website that helps with productivity with custom drawn icons and images.",
     "skills": ["HTML", "CSS", "JS"]
   }
